--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
 <body>
